kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: olszewskista/back_bez:latest
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: "0.3"
              memory: "512Mi"
            requests:
              cpu: "0.2"
              memory: "256Mi"
---

apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
